--- a/relations/Cargo.toml
+++ b/relations/Cargo.toml
@@ -13,8 +13,8 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-ark-ff = { version = "^0.3.0", default-features = false }
-ark-std = { version = "^0.3.0", default-features = false }
+ark-std = { git = "https://github.com/ChorusOne/ark-std", branch = "giulio/random_feature", default-features = false }
+ark-ff = { git = "https://github.com/ChorusOne/ark-algebra", branch = "giulio/random", default-features = false }
 tracing = { version = "0.1", default-features = false }
 tracing-subscriber = { version = "0.2", default-features = false, optional = true }
 
