--- a/snark/Cargo.toml
+++ b/snark/Cargo.toml
@@ -13,6 +13,6 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-ark-ff = { version = "^0.3.0", default-features = false }
-ark-std = { version = "^0.3.0", default-features = false }
-ark-relations = { version = "^0.3.0", path = "../relations", default-features = false }
+ark-std = { git = "https://github.com/ChorusOne/ark-std", branch = "giulio/random_feature", default-features = false }
+ark-ff = { git = "https://github.com/ChorusOne/ark-algebra", branch = "giulio/random", default-features = false }
+ark-relations = {path = "../relations", default-features = false }
